# Cpp_BenchMark_Lab

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Cpp_BenchMark_Lab.cpp  Cpp_BenchMark_Lab.slnx  Cpp_BenchMark_Lab.vcxproj  Cpp_BenchMark_Lab.vcxproj.filters  LICENSE.txt  README.md
docs/: 4_SIMD_Log.md  6_ImageGrayscaling_Log.md  7_Sorting_Log.md  8_IO_Log.md  IO_Log.md  ImageGrayscaling_Log.md  MatrixMultiplication_Log.md  MemoryArena_Log.md  MultiThreading_Log.md  Optimization_log.md  SIMD_Log.md  Sorting_Log.md  VectorAddition_Log.md
include/: BenchMarkReporter.hpp  FileIO.hpp  ImageGrayscale.hpp  ImageUtils.hpp  MatrixMath.hpp  MemoryArena.hpp  Sorting.hpp  Timer.hpp  VectorMath.hpp
results/: Matrix_results.csv  Memory_Arena_results.csv  SIMD_results.csv  Threading_results.csv  results.csv  vector_results.csv
results/IO/: IO_results.csv
results/Image/: ImageGrayscaling_results.csv
results/Matrix/: Matrix_results.csv  Memory_Arena_results.csv  SIMD_results.csv  Threading_results.csv
results/Sorting/: Sorting_results.csv
results/Vector/: vector_results.csv
scripts/: Compiled_Plotting.py  results_Arena_plot.py  results_ImageGrayscaling.py  results_MatrixMath_Final_plot.py  results_MatrixMath_Final_plot_BestAlgo.py  results_SIMD_plot.py  results_Sorting_plot.py  results_io_plot.py  results_matrix_plot.py  results_plot.py  results_threading_plot.py  results_vector_plot.py
src/: Test.cpp
src/IO/: FileParser_baseline.cpp  FileParser_mmap.cpp  file_generator.cpp
src/algorithms/: Grayscale_baseline.cpp  Grayscale_multiThreaded.cpp  Grayscale_optimized.cpp  MatrixMath_MemoryArena.cpp  MatrixMath_SIMD.cpp  MatrixMath_baseline.cpp  MatrixMath_cacheTiling.cpp  MatrixMath_loopReordered.cpp  MatrixMath_multiThreaded.cpp  MatrixMath_multiThreaded_SIMD.cpp  VectorMath_baseline.cpp  VectorMath_optimized.cpp  VectorMath_prealloc.cpp  VectorMath_reserving.cpp  sorting_baseline.cpp  sorting_radix.cpp
src/benchmark/: main.cpp
src/utils/: BenchMarkReporter.cpp  ImageUtils.cpp  MemoryArena.cpp  Timer.cpp
